[python] consolidate string handling into string_builder class
Extract duplicated string null-termination, character extraction, and
concatenation logic from python_converter into a dedicated string_builder
helper class. This reduces code duplication and improves maintainability
by centralizing string operation logic, similar to the existing type_handler
pattern.

- Add string_builder.h/cpp with methods for string literal creation,
  null-termination, and concatenation
- Update python_converter to use string_builder for all string operations
- Simplify get_literal() and handle_string_concatenation() implementations

Signed-off-by: Lucas Cordeiro <lucasccordeiro@gmail.com>

--- a/src/python-frontend/CMakeLists.txt
+++ b/src/python-frontend/CMakeLists.txt
@@ -22,6 +22,7 @@ add_library(pythonfrontend STATIC
             function_call_expr.cpp
             numpy_call_expr.cpp
             function_call_builder.cpp
+            string_builder.cpp
             ${CMAKE_SOURCE_DIR}/src/ansi-c/parse_float.cpp
             ${CMAKE_SOURCE_DIR}/src/ansi-c/convert_float_literal.cpp)
 
