[regression] added a flag to addd only CORE tests

--- a/regression/CMakeLists.txt
+++ b/regression/CMakeLists.txt
@@ -261,6 +261,9 @@ foreach(regression IN LISTS REGRESSIONS)
     else()
         set(MODES CORE KNOWNBUG FUTURE THOROUGH)
     endif()
+    if(CORE_REGRESSION_ONLY)
+      set(MODES CORE)
+    endif()
     add_esbmc_regression("${regression}" "${MODES}")
 endforeach()
 
