fixed intrinsic utils test compilation
Refactored the CMakeLists.txt to enable the intrinsic-utils-test unit
test. Updated the intrinsic_utils.test.cpp file by moving the mode_table
declaration outside of the SCENARIO function and adjusting the
argument order in gen_byte_memcpy to match the expected parameters.

--- a/unit/goto-symex/CMakeLists.txt
+++ b/unit/goto-symex/CMakeLists.txt
@@ -1,1 +1,1 @@
-#new_unit_test(intrinsic-utils-test "intrinsic_utils.test.cpp" "symex;solvers;test_goto_factory;gotoprograms;gotoalgorithms;abstract-interpretation;pointeranalysis;filesystem;langapi;util_esbmc;symex")
+new_unit_test(intrinsic-utils-test "intrinsic_utils.test.cpp" "symex;solvers;gotoalgorithms;pointeranalysis;util_esbmc;langapi")
