Disable intrinsic-utils-test temporarily
Currently, the CMake configuration for this test is causing issues due
to dependency problems. It does not make sense for this test to depend
on solvers at present. We will reactivate it when the dependency
issues are resolved.

--- a/unit/goto-symex/CMakeLists.txt
+++ b/unit/goto-symex/CMakeLists.txt
@@ -1,1 +1,4 @@
-new_unit_test(intrinsic-utils-test "intrinsic_utils.test.cpp" "symex;solvers;gotoalgorithms;pointeranalysis;util_esbmc;langapi")
+# Activate this on demand for now
+# Our current CMake is having some weird dependencies...
+# It makes no sense for this test to depend on solvers
+#new_unit_test(intrinsic-utils-test "intrinsic_utils.test.cpp" "symex;solvers;gotoalgorithms;pointeranalysis;util_esbmc;langapi")
