--- a/regression/CMakeLists.txt
+++ b/regression/CMakeLists.txt
@@ -83,6 +83,7 @@ if(ENABLE_PYTHON_FRONTEND)
     set(REGRESSIONS_PYTHON python)
     set(REGRESSIONS_PYTHON_INTENSIVE python-intensive)
     set(REGRESSIONS_NUMPY numpy)
+    set(REGRESSIONS_HUMANEVAL humaneval)
 endif()
 
 if(ESBMC_CHERI_CLANG)
@@ -176,6 +177,7 @@ if(APPLE)
                     ${REGRESSIONS_PYTHON}
                     ${REGRESSIONS_PYTHON_INTENSIVE}
                     ${REGRESSIONS_NUMPY}
+                    ${REGRESSIONS_HUMANEVAL}
                     ltl
                     goto-transcoder
                     loop-invariants
@@ -238,6 +240,7 @@ else()
                     ${REGRESSIONS_PYTHON}
                     ${REGRESSIONS_PYTHON_INTENSIVE}
                     ${REGRESSIONS_NUMPY}
+                    ${REGRESSIONS_HUMANEVAL}
                     ltl
                     goto-coverage
                     goto-transcoder
@@ -263,5 +266,3 @@ foreach(regression IN LISTS REGRESSIONS)
     endif()
     add_esbmc_regression("${regression}" "${MODES}")
 endforeach()
-
-
