Moving quixbugs tests

--- a/regression/CMakeLists.txt
+++ b/regression/CMakeLists.txt
@@ -84,6 +84,7 @@ if(ENABLE_PYTHON_FRONTEND)
     set(REGRESSIONS_PYTHON_INTENSIVE python-intensive)
     set(REGRESSIONS_NUMPY numpy)
     set(REGRESSIONS_HUMANEVAL humaneval)
+    set(REGRESSIONS_QUIXBUGS quixbugs)
 endif()
 
 if(ESBMC_CHERI_CLANG)
@@ -178,6 +179,7 @@ if(APPLE)
                     ${REGRESSIONS_PYTHON_INTENSIVE}
                     ${REGRESSIONS_NUMPY}
                     ${REGRESSIONS_HUMANEVAL}
+                    ${REGRESSIONS_QUIXBUGS}
                     ltl
                     goto-transcoder
                     loop-invariants
@@ -241,6 +243,7 @@ else()
                     ${REGRESSIONS_PYTHON_INTENSIVE}
                     ${REGRESSIONS_NUMPY}
                     ${REGRESSIONS_HUMANEVAL}
+                    ${REGRESSIONS_QUIXBUGS}
                     ltl
                     goto-coverage
                     goto-transcoder
