added string_container tests
This text appears to be the code for a test suite written in C++ for a
container class called `string_containert`. The test suite covers
various aspects of the container's functionality, including:

1. Basic operations (insertion, lookup, and uniqueness of keys)
2. Concurrency tests (multiple threads inserting and looking up
values)
3. Stress tests (testing with many unique strings and repeated
lookups)
4. Index validity tests (ensuring that indices are assigned
sequentially and consistently)
5. Edge cases (null characters, non-English characters, etc.)

The code is written in a style where each test is defined as a
separate function, which helps organize the test suite and make it
easier to understand and maintain.

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -16,6 +16,8 @@ add_library(crypto_hash crypto_hash.cpp)
 target_include_directories(crypto_hash PUBLIC ${Boost_INCLUDE_DIRS})
 target_link_libraries(crypto_hash PUBLIC ${Boost_LIBRARIES})
 
+add_library(string_container string_container.cpp)
+
 add_library(util_esbmc xml_irep.cpp xml.cpp
         arith_tools.cpp base_type.cpp cmdline.cpp config.cpp config_file.cpp context.cpp
         expr_util.cpp i2string.cpp location.cpp
@@ -33,8 +35,9 @@ add_library(util_esbmc xml_irep.cpp xml.cpp
         string_constant.cpp c_types.cpp python_types.cpp ieee_float.cpp c_qualifiers.cpp
         c_sizeof.cpp c_link.cpp c_typecast.cpp fix_symbol.cpp destructor.cpp
         c_expr2string.cpp cpp_expr2string.cpp type2name.cpp
-        message.cpp encoding.cpp
+        message.cpp encoding.cpp expr.cpp irep.cpp type.cpp
         )
+
 # Boost is needed by anything that touches irep2
 target_include_directories(util_esbmc
         PUBLIC ${CMAKE_BINARY_DIR}/src
@@ -44,6 +47,6 @@ target_include_directories(util_esbmc
         )
 
 target_compile_definitions(util_esbmc PUBLIC BOOST_ALL_NO_LIB)
-target_link_libraries(util_esbmc PUBLIC irep2 fmt::fmt ${Boost_LIBRARIES})
+target_link_libraries(util_esbmc PUBLIC irep2 fmt::fmt string_container ${Boost_LIBRARIES})
 
 target_link_libraries(algorithms gotoprograms)
