--- a/unit/util/CMakeLists.txt
+++ b/unit/util/CMakeLists.txt
@@ -7,5 +7,6 @@ new_unit_test(replace_symboltest "replace_symbol.test.cpp" "util_esbmc;irep2;big
 new_unit_test(ireptest "irep.test.cpp" "util_esbmc;irep2;bigint")
 new_unit_test(filesystemtest "filesystem.test.cpp" "filesystem")
 new_unit_test(ieeefloattest "ieee_float.test.cpp" "util_esbmc;bigint")
+new_unit_test(string_containertest "string_container.test.cpp" "string_container")
 # Running the fuzzer normally would overflow the /tmp with files.
 new_fast_fuzz_test(filesystemfuzz "filesystem.fuzz.cpp" "filesystem")
