[python] move math operations to python_math class
This commit refactored internal architecture:

- Extract 8 math operations into new python_math class
- Reduce python_converter complexity by ~350 lines
- Improve testability and maintainability
- Follow existing handler pattern architecture

Tested: All existing tests pass + new unit tests added

--- a/src/python-frontend/CMakeLists.txt
+++ b/src/python-frontend/CMakeLists.txt
@@ -14,6 +14,7 @@ add_library(pythonfrontend STATIC
             python_language.cpp
             python_converter.cpp
             python_list.cpp
+            python_math.cpp
             pythonastgen.c
             module_manager.cpp
             module_locator.cpp
