Update FindIbex module and include additional error handling
- Update the CPM function calls to use cpmaddpackage with more
  options.
- Remove FindPkgConfig call as it's no longer needed.
+ Use find_package(ibex) instead of manual setup, which simplifies
ibex version management.
- Correctly set IBEX_TARGET for the libex installation.

--- a/src/goto-programs/CMakeLists.txt
+++ b/src/goto-programs/CMakeLists.txt
@@ -17,7 +17,8 @@ if(ENABLE_GOTO_CONTRACTOR)
     include(FindIbex)
     add_library(gotocontractor goto_contractor.cpp)
     target_include_directories(gotocontractor PUBLIC ${IBEX_INCLUDE_DIRS} ${IBEX_INCLUDE_DIRS}/ibex ${IBEX_INCLUDE_DIRS}/ibex/3rd)
-    target_link_libraries(gotocontractor PUBLIC algorithms gotoprograms PkgConfig::IBEX)
+  target_link_libraries(gotocontractor PUBLIC algorithms gotoprograms ${IBEX_TARGET})
+
 endif()
 
 add_subdirectory(abstract-interpretation)
