[python] extract tuple operations to dedicated tuple_handler
Refactor tuple-related functionality from python_converter into a new
tuple_handler class following the existing handler pattern (string_handler,
type_handler).

Changes:
- Add tuple_handler.h/cpp with tuple creation, subscripting, and unpacking
- Move get_tuple_expr, handle_tuple_subscript, handle_tuple_unpacking,
  and prepare_rhs_for_unpacking from python_converter to tuple_handler
- Update python_converter to delegate tuple operations to tuple_handler
- Maintain original functionality with no behavioral changes

Signed-off-by: Lucas Cordeiro <lucasccordeiro@gmail.com>

--- a/src/python-frontend/CMakeLists.txt
+++ b/src/python-frontend/CMakeLists.txt
@@ -26,6 +26,7 @@ add_library(pythonfrontend STATIC
             string_builder.cpp
             string_handler.cpp
             parse_float.cpp
+            tuple_handler.cpp
             convert_float_literal.cpp)
 
 target_include_directories(pythonfrontend
