[python] Refactor class parsing

--- a/src/python-frontend/CMakeLists.txt
+++ b/src/python-frontend/CMakeLists.txt
@@ -13,6 +13,8 @@
 add_library(pythonfrontend STATIC
             python_language.cpp
             python_converter.cpp
+            python_class.cpp
+            python_class_builder.cpp
             python_list.cpp
             python_math.cpp
             pythonastgen.c
