[python] added initial support for dictionaries
Signed-off-by: Lucas Cordeiro <lucasccordeiro@gmail.com>

--- a/src/python-frontend/CMakeLists.txt
+++ b/src/python-frontend/CMakeLists.txt
@@ -15,6 +15,7 @@ add_library(pythonfrontend STATIC
             python_converter.cpp
             python_class.cpp
             python_class_builder.cpp
+            python_dict_handler.cpp
             python_list.cpp
             python_math.cpp
             pythonastgen.c
