disabled test that is breaking windows builds

--- a/unit/python-frontend/CMakeLists.txt
+++ b/unit/python-frontend/CMakeLists.txt
@@ -1,3 +1,5 @@
+if(NOT WIN32)
 new_unit_test(python_annotation_test "python_annotation_test.cpp" "pythonfrontend;util_esbmc;bigint;nlohmann_json::nlohmann_json")
+endif()
 new_unit_test(symbol_id_test "symbol_id_test.cpp" "pythonfrontend")
 new_unit_test(python_class_test "python_class_test.cpp" "pythonfrontend")
