Fix Python frontend build and testing on macOS CI
- Install and use Python 3.12 explicitly on macOS (Python 3.14 removed ast.Str/ast.Num)
- Set Python3_EXECUTABLE in build.sh and pass to CMake
- Create python3 symlink to python3.12 for ESBMC runtime
- Add PATH configuration in GitHub Actions workflow for ctest
- Update regression/CMakeLists.txt to prioritize Python3_EXECUTABLE
- Update check_python_tests.sh to use python3.12 on macOS
- Fix BASE_ARGS appending in macos_setup to preserve ENABLE_PYTHON_FRONTEND flag

--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -32,9 +32,14 @@ jobs:
     - name: Check Python regression tests
       if: ${{ inputs.testing == true }}
       run: |
+        # Set PATH to include Python 3.12 (for ESBMC and scripts to find correct python3)
+        export PATH="$(brew --prefix python@3.12)/bin:$PATH"
         chmod +x scripts/check_python_tests.sh
         ./scripts/check_python_tests.sh
 
     - name: Run tests
       if: ${{ inputs.testing == true }}
-      run: cd build/ && ctest -j4 --output-on-failure --progress .
+      run: |
+        # Set PATH to include Python 3.12 (for ESBMC to find correct python3)
+        export PATH="$(brew --prefix python@3.12)/bin:$PATH"
+        cd build/ && ctest -j4 --output-on-failure --progress .
