Fix: Add mypy to PATH in CI test steps
- Add $HOME/Library/Python/3.12/bin to PATH in test steps
- This ensures mypy (and other user-installed Python tools) can be found
- Fixes FileNotFoundError: [Errno 2] No such file or directory: 'mypy'

--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -32,16 +32,16 @@ jobs:
     - name: Check Python regression tests
       if: ${{ inputs.testing == true }}
       run: |
-        # Set PATH to include Python 3.12 (for ESBMC and scripts to find correct python3)
-        export PATH="$(brew --prefix python@3.12)/bin:$PATH"
+        # Set PATH to include Python 3.12 and user-installed tools (mypy, meson, etc.)
+        export PATH="$(brew --prefix python@3.12)/bin:$HOME/Library/Python/3.12/bin:$PATH"
         chmod +x scripts/check_python_tests.sh
         ./scripts/check_python_tests.sh
 
     - name: Run tests
       if: ${{ inputs.testing == true }}
       run: |
-        # Set PATH to include Python 3.12 (for ESBMC to find correct python3)
-        export PATH="$(brew --prefix python@3.12)/bin:$PATH"
+        # Set PATH to include Python 3.12 and user-installed tools (mypy, meson, etc.)
+        export PATH="$(brew --prefix python@3.12)/bin:$HOME/Library/Python/3.12/bin:$PATH"
         cd build/
         # On macOS, only run Python tests; on other systems, run all tests
         if [[ "${{ inputs.operating-system }}" =~ ^macos ]]; then
