--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,9 @@ src/CMakeCache.txt
 src/CMakeFiles/
 src/CPackConfig.cmake
 src/CPackSourceConfig.cmake
+
+
+#Ignore cursor AI rules
+.cursor/rules/codacy.mdc
+activate_python312.sh
+scripts/build-with-venv.sh
