Enable testing for macOS build in PR workflow
- Change testing from false to true for build-macos-arm job
- macOS will now run Python regression tests (configured in build-unix.yml)

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -58,7 +58,7 @@ jobs:
     with:
       operating-system: macos-latest
       build-flags: '-c 21'
-      testing: false
+      testing: true
 
   build-cheri:
     uses: ./.github/workflows/build-unix.yml
