[python] regression tests

--- a/regression/CMakeLists.txt
+++ b/regression/CMakeLists.txt
@@ -99,6 +99,7 @@ if(ENABLE_PYTHON_FRONTEND)
     set(REGRESSIONS_NUMPY numpy)
     set(REGRESSIONS_HUMANEVAL humaneval)
     set(REGRESSIONS_QUIXBUGS quixbugs)
+    set(REGRESSIONS_PYTHON_COVERAGE python-coverage)
 endif()
 
 if(ESBMC_CHERI_CLANG)
@@ -194,6 +195,7 @@ if(APPLE)
                     ${REGRESSIONS_NUMPY}
                     ${REGRESSIONS_HUMANEVAL}
                     ${REGRESSIONS_QUIXBUGS}
+                    ${REGRESSIONS_PYTHON_COVERAGE}
                     ltl
                     goto-transcoder
                     loop-invariants
@@ -258,6 +260,7 @@ else()
                     ${REGRESSIONS_NUMPY}
                     ${REGRESSIONS_HUMANEVAL}
                     ${REGRESSIONS_QUIXBUGS}
+                    ${REGRESSIONS_PYTHON_COVERAGE}
                     ltl
                     goto-coverage
                     goto-transcoder
