[python] extract set operations into dedicated python_set class
Move set difference, intersection, and union operations from python_list
to new python_set class for better code organization and separation of
concerns.

Signed-off-by: Lucas Cordeiro <lucasccordeiro@gmail.com>

--- a/src/python-frontend/CMakeLists.txt
+++ b/src/python-frontend/CMakeLists.txt
@@ -18,6 +18,7 @@ add_library(pythonfrontend STATIC
             python_dict_handler.cpp
             python_list.cpp
             python_math.cpp
+            python_set.cpp
             pythonastgen.c
             module_manager.cpp
             module_locator.cpp
