refactor: --unwindsetname parsing to use usr_utils

--- a/src/goto-symex/CMakeLists.txt
+++ b/src/goto-symex/CMakeLists.txt
@@ -10,7 +10,7 @@ target_include_directories(symex
     PRIVATE ${Boost_INCLUDE_DIRS}
 )
 target_compile_definitions(symex PUBLIC BOOST_ALL_NO_LIB)
-target_link_libraries(symex nlohmann_json::nlohmann_json yaml-cpp::yaml-cpp fmt::fmt)
+target_link_libraries(symex nlohmann_json::nlohmann_json yaml-cpp::yaml-cpp fmt::fmt usr_utils)
 
 if(WIN32)
   target_link_libraries(symex nlohmann_json::nlohmann_json yaml-cpp::yaml-cpp fmt::fmt wsock32 ws2_32)
