--- a/debian/control
+++ b/debian/control
@@ -33,8 +33,11 @@ Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
          python3,
          python3-mypy,
+         python3-pip,
          libstdc++6,
-         libstdc++-dev
+         libstdc++-dev,
+         clang-16 | clang-14 | clang,
+         libclang-common-16-dev | libclang-common-14-dev
 Description: Efficient SMT-based Context-Bounded Model Checker
  ESBMC is a context-bounded model checker for the verification of
  single- and multi-threaded C/C++ programs. It can automatically verify
