--- a/regression/CMakeLists.txt
+++ b/regression/CMakeLists.txt
@@ -138,6 +138,7 @@ set(REGRESSIONS_CPP03 esbmc-cpp/cpp
                       esbmc-cpp/try_catch
                       esbmc-cpp/functional
                       esbmc-cpp/bitset
+                      esbmc-cpp/unwindsetname
                       )
 # list of C++11 test suites
 set(REGRESSIONS_CPP11 esbmc-cpp11/cpp
