--- a/.github/workflows/benchexec-diff.yml
+++ b/.github/workflows/benchexec-diff.yml
@@ -6,9 +6,9 @@ on:
         description: 'Old run'
         required: true
         default: '30'
-      new_id:
+      old_run_id:
         description: 'New run'
-        required: false
+        required: true
         default: ''
 
 jobs:
@@ -18,5 +18,6 @@ jobs:
       - uses: actions/download-artifact@v5
         with:
           artifact-ids: ${{ inputs.original_id }}
+          run-id: ${{ inputs.old_run_id }}
       - name: Display results
         run: ls -R
