--- a/.github/workflows/benchexec-diff.yml
+++ b/.github/workflows/benchexec-diff.yml
@@ -10,15 +10,15 @@ on:
         description: 'New run'
         required: false
         default: ''
-
 jobs:
-  create-diff:
+  fetch-old-artifact:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/download-artifact@v5
-        with:
-          name: esbmc-result
-          run-id: 20194414372
-          repository: esbmc/esbmc
-      - name: Display results
-        run: ls -R
+      - name: Download artifact from previous run
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          gh run download 20194414372 \
+            --repo esbmc/esbmc \
+            --name esbmc-result \
+            --dir old-artifact
