--- a/.github/workflows/benchexec-diff.yml
+++ b/.github/workflows/benchexec-diff.yml
@@ -43,6 +43,11 @@ jobs:
             --repo esbmc/esbmc \
             --name esbmc-result \
             --dir new-artifact
-      - name: List files
-        run: ls -lR
+
+      - name: Extract artifacts and run comparison
+        run: |
+          # Adjust globbing if the directory names differ
+          unzip old-artifact/*/output.zip -d old-extracted
+          unzip new-artifact/*/output.zip -d new-extracted
+          ./scripts/competitions/compare-runs.sh old-extracted new-extracted
 
