--- a/.github/workflows/benchexec-diff.yml
+++ b/.github/workflows/benchexec-diff.yml
@@ -54,5 +54,5 @@ jobs:
           unzip old-artifact/output.zip -d old-extracted || true
           unzip new-artifact/output.zip -d new-extracted || true
       - name: Run diff
-        run: ./scripts/competitions/compare-runs.sh old-extracted new-extracted
+        run: ./scripts/competitions/compare-runs.sh old-extracted/esbmc-output new-extracted/esbmc-output
 
