added upload diff

--- a/.github/workflows/benchexec-diff.yml
+++ b/.github/workflows/benchexec-diff.yml
@@ -54,5 +54,10 @@ jobs:
           unzip old-artifact/output.zip -d old-extracted || true
           unzip new-artifact/output.zip -d new-extracted || true
       - name: Run diff
-        run: ./scripts/competitions/compare-runs.sh old-extracted/esbmc-output new-extracted/esbmc-output
-
+        run: ./scripts/competitions/compare-runs.sh old-extracted/esbmc-outputo new-extracted/esbmc-output
+      - name: Build ESBMC
+        run: ./scripts/build.sh ${{ inputs.build-flags }}
+      - uses: actions/upload-artifact@v4
+        with:
+          name: release-${{ inputs.operating-system }}-${{ inputs.build-flags }}
+          path: ./diff-old-extracted/esbmc-output-new-extracted/esbmc-output/
