--- a/.github/workflows/benchexec-diff.yml
+++ b/.github/workflows/benchexec-diff.yml
@@ -57,5 +57,5 @@ jobs:
         run: ./scripts/competitions/compare-runs.sh old-extracted/esbmc-output new-extracted/esbmc-output
       - uses: actions/upload-artifact@v4
         with:
-          name: release-${{ inputs.operating-system }}-${{ inputs.build-flags }}
+          name: benchexec-diff
           path: ./diff-old-extracted/esbmc-output-new-extracted/esbmc-output/
