--- a/.github/workflows/benchexec-diff.yml
+++ b/.github/workflows/benchexec-diff.yml
@@ -53,9 +53,11 @@ jobs:
         run: |
           unzip old-artifact/output.zip -d old-extracted || true
           unzip new-artifact/output.zip -d new-extracted || true
+          mv old-extracted/esbmc-output old
+          mv new-extracted/esbmc-output new
       - name: Run diff
-        run: ./scripts/competitions/compare-runs.sh old-extracted/esbmc-output new-extracted/esbmc-output
+        run: ./scripts/competitions/compare-runs.sh old new
       - uses: actions/upload-artifact@v4
         with:
           name: benchexec-diff
-          path: ./diff-old-extracted/esbmc-output-new-extracted/esbmc-output/
+          path: ./diff-old-new
