--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -22,6 +22,18 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Cache CMake dependency src and build
+      uses: actions/cache@v3
+      with:
+        path: |
+          ${{github.workspace}}/build/_deps/*-src
+          ${{github.workspace}}/build/_deps/*-build
+          ${{github.workspace}}/build/_deps/*-subbuild
+        key:  |
+          ${{ inputs.operating-system }}-${{ inputs.build-flags }}-${{ hashFiles('**/CMakeLists.txt') }}
+        restore-keys: |
+          ${{ inputs.operating-system }}-${{ inputs.build-flags }}-
+
     - name: Build ESBMC
       run: ./scripts/build.sh ${{ inputs.build-flags }}
     - uses: actions/upload-artifact@v4
