--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -30,9 +30,9 @@ jobs:
           ${{github.workspace}}/build/_deps/*-build
           ${{github.workspace}}/build/_deps/*-subbuild
         key:  |
-          ${{ inputs.operating-system }}-${{ inputs.build-flags }}-${{ hashFiles('**/CMakeLists.txt') }}
+          ${{ inputs.operating-system }}-${{ hashFiles('**/CMakeLists.txt') }}
         restore-keys: |
-          ${{ inputs.operating-system }}-${{ inputs.build-flags }}-
+          ${{ inputs.operating-system }}-
 
     - name: Build ESBMC
       run: ./scripts/build.sh ${{ inputs.build-flags }}
