--- a/.github/workflows/build-onpush.yml
+++ b/.github/workflows/build-onpush.yml
@@ -7,7 +7,7 @@ jobs:
 
   # Check testing tool suite
   testing-tool:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-slim
     steps:
     - uses: actions/checkout@v4
     - name: Runs testing tool unit test
