--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -22,17 +22,14 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - uses: actions/cache@v3
+    # For restore ccache
+    - uses: hendrikmuhs/ccache-action@v1.2
       if: ${{ startsWith(inputs.operating-system, 'ubuntu-') }}
       with:
-        path: |
-          ${{github.workspace}}/build/_deps/*-src
-          ${{github.workspace}}/build/_deps/*-build
-          ${{github.workspace}}/build/_deps/*-subbuild
-        key:  |
-          ${{ inputs.operating-system }}-${{ inputs.build-flags }}-${{ hashFiles('**/CMakeLists.txt') }}
+        save: ${{ github.event_name == 'push' }}
+        key: ${{ inputs.operating-system }}-${{ hashFiles('**/*.cpp','**/*.h') }}
         restore-keys: |
-          ${{ inputs.operating-system }}-${{ inputs.build-flags }}-
+          ${{ inputs.operating-system }}-
 
     - name: Build ESBMC
       run: ./scripts/build.sh ${{ inputs.build-flags }}
