--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -6,7 +6,7 @@ jobs:
 
   # Check testing tool suite
   testing-tool:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-slim
     steps:
     - uses: actions/checkout@v4
     - name: Runs testing tool unit test
@@ -71,7 +71,7 @@ jobs:
     # Check project with clang-format
   code-style:
     name: Check C/C++ code-style
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-slim
     permissions:
       # Give the default GITHUB_TOKEN write permission to commit and push the
       # added or changed files to the repository.
@@ -101,7 +101,7 @@ jobs:
   # Check project with YAPF
   python-style:
       name: Check Python code style (YAPF)
-      runs-on: ubuntu-22.04
+      runs-on: ubuntu-slim
       permissions:
         contents: write
       steps:
@@ -146,7 +146,7 @@ jobs:
 
   cmake-lint:
     name: Check CMake modules
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-slim
     continue-on-error: true # TODO: Eventually this will be removed
     steps:
     - uses: actions/checkout@v4
