--- a/regression/CMakeLists.txt
+++ b/regression/CMakeLists.txt
@@ -60,6 +60,9 @@ endfunction()
 
 function(add_esbmc_regression folder modes)
     SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR}/${regression})
+    if(${folder} STREQUAL "quixbugs")
+        list(REMOVE_ITEM SUBDIRS bucketsort)
+    endif()
     foreach(test ${SUBDIRS})
         add_esbmc_regression_test(${folder} "${modes}" ${test})
     endforeach()
